--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "axios": "^1.4.0",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -33,6 +35,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
+    "tailwind-merge": "^1.13.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
