--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^1.13.2",
     "web-vitals": "^2.1.4"
