--- a/package.json
+++ b/package.json
@@ -72,12 +72,15 @@
     "@typescript-eslint/parser": "^5.60.1",
     "concurrently": "^8.2.0",
     "eslint": "^8.43.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
-    "prettier": "^2.8.8",
+    "prettier": "2.8.8",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   }
