--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "jsonwebtoken": "^9.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-steam": "^1.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flags-select": "^2.2.3",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
