--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.256.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
     "nodemon": "^2.0.22",
@@ -39,6 +40,7 @@
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
