--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport": "^0.6.0",
     "passport-steam": "^1.0.18",
     "react": "^18.2.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
     "react-router-dom": "^6.14.0",
@@ -72,6 +73,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.9",
+    "@types/react-collapse": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "concurrently": "^8.2.0",
