--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@tanstack/react-query-devtools": "^4.29.19",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "^14.0.0",
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -77,6 +77,7 @@
     "@babel/preset-typescript": "^7.22.5",
     "@jest/globals": "^27.5.1",
     "@tanstack/eslint-plugin-query": "^4.29.9",
+    "@testing-library/dom": "^9.3.1",
     "@types/jest": "^29.5.3",
     "@types/react-collapse": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
